@@ -1,3 +1,8 @@
+TAG: lib_py_cluster-tr12069-1
+DATE: 11/21/2016
+STAFF: sc
+CHANGES: clusterlib.py - remove setAutoTranslate*
+
 TAG: lib_py_cluster-tr12069-BP
 DATE: 11/21/2016
 STAFF: sc
